Update travis.yml and README.md

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,5 @@ deploy:
   gem: tmj_ruby
   on:
     tags: true
-    repo: frbk/tmj_ruby
+    repo: automation-wizards/tmj_ruby
     branch: master
